fix gradle. reworl geiger view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -277,7 +277,7 @@
     <string name="popup_no">No</string>
     <string name="popup_drop">Drop</string>
     <string name="popup_use">Use</string>
-    <string name="tray_open">PDA Compass v.1813 GM</string>
+    <string name="tray_open">PDA Compass</string>
     <string name="tray_stop">PDA Off</string>
     <string name="tray_settings">Tune PDA</string>
     <string name="tray_vibro">Vibro off/on </string>
