chanhes for game in Izhevsk

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -277,7 +277,7 @@
     <string name="popup_no">Нет</string>
     <string name="popup_drop">Выбросить</string>
     <string name="popup_use">Использовать</string>
-    <string name="tray_open">ПДА Компас v.1813 GM</string>
+    <string name="tray_open">ПДА Компас. 12 Зиверт</string>
     <string name="tray_stop">Выкл. ПДА</string>
     <string name="tray_settings">Настроить ПДА</string>
     <string name="tray_vibro">Виброэффекты выкл./вкл. </string>
